Fixed alignment of links in the footer.

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,6 +11,24 @@
 
 .footer-icon {
   height: 18pt;
+  width: 18pt;
+  margin-right: 8px;
+  /* The lines below makes sure that the image is square*/
+  object-fit: cover;
+  object-position: 0% 0;
+}
+
+.footer-li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 6px;
+}
+
+.footer-text {
+  color: #444444;
+  font-family: "bree_serifregular", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 100;
 }
 
 .footer-copyright-link {
